Fix issue on iOS safari.
- Do not show when it is on safari of iOS devices.
- Try to fix the icon background size issue.

--- a/jQuery.smartWebBanner.css
+++ b/jQuery.smartWebBanner.css
@@ -7,7 +7,7 @@
 #smartWebBanner { position:absolute; left:0; top:-4.85em; border-bottom:0.1em solid #e8e8e8; width:100%; height:4.85em; font-family:'Helvetica Neue',sans-serif; font-size:16px; text-align:left; background:-webkit-linear-gradient(top, #f4f4f4 0%,#cdcdcd 100%); box-shadow:0 0.1em 0.15em rgba(0,0,0,0.5); z-index:9998; -webkit-font-smoothing:antialiased; overflow:hidden; -webkit-text-size-adjust:none; }
 #swb-close { position:absolute; left:0.6em; top:0.6em; display:block; border:0.3em solid #fff; width:1.4em; height:1.4em; font-family:'ArialRoundedMTBold','Helvetica Neue',sans-serif; font-size:0.6em; line-height:1.4em; text-align:center; color:#fff; background:#070707; text-decoration:none; text-shadow:none; border-radius:1.4em; box-shadow:0 0.3em 0.4em rgba(0,0,0,0.4); -webkit-font-smoothing:subpixel-antialiased; }
 #swb-close:active { color:#aaa; }
-#swb-icon { position:absolute; left:1.9em; top:0.65em; display:block; width:3.6em; height:3.6em; background:rgba(0,0,0,0.6); background-size:cover; border-radius:0.65em; box-shadow:0 0.1em 0.2em rgba(0,0,0,0.3); }
+#swb-icon { position:absolute; left:1.9em; top:0.65em; display:block; width:3.6em; height:3.6em; background:rgba(0,0,0,0.6); background-size:100% 100%; border-radius:0.65em; box-shadow:0 0.1em 0.2em rgba(0,0,0,0.3); }
 #swb-icon.gloss:after { content:''; position:absolute; left:0; top:-0.1em; border-top:0.1em solid rgba(255,255,255,0.8); width:100%; height:50%; background:-webkit-linear-gradient(top, rgba(255,255,255,0.7) 0%,rgba(255,255,255,0.2) 100%); border-radius:0.65em 0.65em 0.8em 0.8em; }
 #swb-icon.gloss:hover:after { opacity:0.8; }
 #smartWebBanner.no-icon #swb-icon { display:none; }
